tdf#130167 writerfilter: while bDiscardHeaderFooter, ignore inlines

Inline objects from unused headers/footers were being loaded
and then ignored, with the result that they were added to the
next text section. Similar to git log -p -w 5510f5635021

An earlier commit attempted to do the same thing I think.
git log -p -w da0c3b50c7969
My guess is that in this case we have MULTIPLE uses of the
same image file, so ultimately it wasn't deleted from
DrawObjects - and therefore could still be referenced.

I found this fix by randomly trying to shut stuff off.
It seems to make sense, but shapes are not my area
of understanding.

Change-Id: I748c0e59638bb83de8461c498e1676bbae47df92